# flower

./: .gitignore  Adaptive Learning Rate for Federated Learning in Resource.pptx  Demo.txt  README.md  mowjow.docx  sample.py
GitHUBCODE/: copilot_code.py
IOCL/: Estimate for Cylinder Project.xlsx
Intro To FL/Lecture 1/: L1_Why_Federated_Learning.ipynb
Intro To FL/Lecture 2/: L2_Federated_Training_Process.ipynb
MyStrat/: FLLOG.txt  FLLOG_my.txt  FairnessIndex.py  Flower_3_Building_a_Strategy_PyTorch.ipynb  data1.json  data_fedavg.json  data_fedlr.json  data_fedprox.json  file.csv  finalgraph.ipynb  fta.ipynb  ftatime FEDPROX.ipynb  ftatime FEDPROX_newgraphs.ipynb  ftatime.ipynb  ftatime_FEDPROX_cifar100_final.ipynb  ftatime_FEDPROX_fmnist_final.ipynb  ftatime_FEDPROX_mnist_final.ipynb  ftatime_Yash.ipynb  ftatime_cifar100.ipynb  ftatime_cifar100_final.ipynb  ftatime_fmnist.ipynb  ftatime_fmnist_final.ipynb  ftatime_lastworking.ipynb  ftatime_lastworking_Yash.ipynb  ftatime_latest.ipynb  ftatime_mnist.ipynb  ftatime_mnist_final.ipynb  graphsfromjason.ipynb  hadwritten.ipynb  jsongraph.ipynb  server.ipynb  simPLOTCIFAR.ipynb
Part-II/: main.py  toy2.py
Pi Codes/: client copy.py  client.py  clientcopy.py  clientcopyconv.py  flwr.yaml  server.py
Result Images/: FLOW FedLR Dia.drawio  FedLR Dia.drawio
Weather/: LSTM_Time_Series_Forecasting.ipynb  sample.py  try.ipynb
drive-download-20230927T134210Z-001/: dataset.py  main.py  model.py  toy.py
my-awesome-app/: pyproject.toml
my-awesome-app/my_awesome_app/: client_app.py  server_app.py  task.py
(+313 files in other folders)
